assets/scss/module-overrides.scss
// table of contents
.table-of-content {
  @apply overflow-hidden rounded;
}

// share icons
.share-icons {
  .share-link {
    @apply h-9 w-9 rounded leading-9;
    @apply bg-theme-light hover:bg-indigo-900 dark:bg-darkmode-primary dark:hover:bg-darkmode-primary;
  }
  .share-icon svg {
    @apply dark:fill-dark fill-indigo-900 hover:fill-slate-50;
  }
}

// notice
.notice {
  @apply rounded-lg;
}

// tab
.tab {
  @apply border-border dark:border-darkmode-border overflow-hidden rounded-lg border;
  &-nav {
    @apply border-border bg-theme-light dark:border-darkmode-border dark:bg-darkmode-theme-light pl-4;

    &-item {
      @apply text-dark dark:text-darkmode-dark px-8 text-lg #{!important};
      &.active {
        @apply border-dark dark:border-darkmode-primary;
      }
    }
  }
  &-content {
    &-panel {
      @apply px-4 pt-0 #{!important};
    }
  }
}

// accordion
.accordion {
  @apply border-border bg-theme-light dark:border-darkmode-border dark:bg-darkmode-theme-light mb-6 overflow-hidden rounded-lg border;
  &-header {
    @apply text-dark dark:text-darkmode-dark;
  }
}

// cookie consent
.cookie-box {
  @apply rounded-lg #{!important};
}

// slider
.gallery-slider {
  @apply ml-0 #{!important};
}

